<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gwen.vfacture.LoginActivity">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="130dp"
        android:id="@+id/image_facture"
        android:src="@drawable/facture_image"
        android:scaleType="fitXY"
        android:contentDescription="@null"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_identifiant"
        android:id="@+id/textView_identifiant"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/image_facture"
        android:layout_alignLeft="@+id/editText_identifiant"
        android:layout_alignStart="@+id/editText_identifiant" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_identifiant"
        android:layout_below="@+id/textView_identifiant"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:maxLength="8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_mdp"
        android:id="@+id/textView_mdp"
        android:layout_below="@+id/editText_identifiant"
        android:layout_alignLeft="@+id/editText_identifiant"
        android:layout_alignStart="@+id/editText_identifiant" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_mdp"
        android:layout_below="@+id/textView_mdp"
        android:layout_alignLeft="@+id/textView_mdp"
        android:layout_alignStart="@+id/textView_mdp"
        android:maxLength="250" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connexion"
        android:id="@+id/button_connexion"
        android:layout_below="@+id/editText_mdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_reconnect_bdd"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_reconnect_bdd"
        android:visibility="invisible"
        android:background="@drawable/rectangle_button" />

</RelativeLayout>
